# flub

./: CMakeLists.txt  README.md  clean.sh  notes.txt
assets/data/: flub-basic.theme  texlist.txt
assets/fonts/: flub-keycaps.bf
assets/raw/: flub-calibrate.psd  flub-gui-base.psd  flub-keycap-misc.psd  flub-slice-test.psd
assets/shaders/: simple.frag  simple.vert  stbfont.frag
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
doxygen/: Doxyfile  Doxyfile.in  flub.md
flub/: anim.h  app.h  appDefaults.h  audio.h  cmdline.h  cmdline_handler.h  config.h  console.h  core.h  flub.h  flubconfig.h.in  font.h  font_struct.h  gfx.h  gui.h  input.h  input_events.inc  layout.h  layout_old.h  license.h  logger.h  memory.h  module.h  physfsrwops.h  physfsutil.h  sdl.h  simpleedit.h  stbfont.h  texture.h  theme.h  thread.h  video.h  widget.h
flub/data/: circbuf.h  critbit.h
flub/util/: color.h  enum.h  file.h  jsmn.h  mime.h  misc.h  parse.h  string.h
flub/widgets/: base.h  window.h
source/: anim.c  app.c  audio.c  cmdline.c  config.c  console.c  core.c  flub.c  font.c  gfx.c  gui.c  input.c  layout.c  license.c  logger.c  memory.c  module.c  physfsrwops.c  physfsutil.c  sdl.c  simpleedit.c  texture.c  theme.c  video.c  widget.c
source/data/: circbuf.c  critbit.c
source/util/: color.c  enum.c  file.c  jsmn.c  mime.c  misc.c  parse.c  string.c
source/widgets/: base.c  window.c
test/: test.c
tools/: font2bin.c  genevents.pl  memfile.c  stbfont.c  texcache.c  themer.c  todo.sh  ttfedit.c
